--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <h1> Hello je m'appelle Hugo </h1>
 
-   <img src="images/kai-lenny-surf-pose.jpg" class="img-cicle">
+   <img src="images/profile-picture.jpg" class="img-cicle">
    <p>Jeune homme de 23 ans en alternance à Audencia. Pationné par l'océan je vous invite à prendre une grande réspiration pour plonger dans mon monde</p>
 
 
